WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35640
Miscellaneous little fixes for the windows build of webkit-gtk
https://bugs.webkit.org/show_bug.cgi?id=35640
Summary
Miscellaneous little fixes for the windows build of webkit-gtk
Fridrich Strba
Reported
2010-03-03 03:23:56 PST
Miscellaneous little fixes for the windows build of webkit-gtk
Attachments
Patch
(3.19 KB, patch)
2010-03-03 03:34 PST
,
Fridrich Strba
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fridrich Strba
Comment 1
2010-03-03 03:34:03 PST
Created
attachment 49895
[details]
Patch
Xan Lopez
Comment 2
2010-03-03 03:59:13 PST
Comment on
attachment 49895
[details]
Patch Ideally this would be one patch per issue since they are totally unrelated... but OK.
WebKit Commit Bot
Comment 3
2010-03-03 04:44:41 PST
Comment on
attachment 49895
[details]
Patch Clearing flags on attachment: 49895 Committed
r55457
: <
http://trac.webkit.org/changeset/55457
>
WebKit Commit Bot
Comment 4
2010-03-03 04:44:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug