2010-03-03  Fridrich Strba  <fridrich.strba@bluewin.ch>

Reviewed by Xan Lopez.

        Miscellaneous little fixes for the windows build of webkit-gtk
        https://bugs.webkit.org/show_bug.cgi?id=35640

        * GNUmakefile.am: On Windows with GCC, presence of
        __declspec(dllexport) on some symbols disables the autoexport/autoimport
        feature for all others. Using regex here assures that all symbols that
        need to be exported in the dll are actually exported.
2010-03-03  Fridrich Strba  <fridrich.strba@bluewin.ch>

        Reviewed by Xan Lopez.

        Miscellaneous little fixes for the windows build of webkit-gtk
        https://bugs.webkit.org/show_bug.cgi?id=35640

        * GNUmakefile.am: dist two new files concerning mathml support.
2010-03-03  Fridrich Strba  <fridrich.strba@bluewin.ch>

        Reviewed by Xan Lopez.

        Miscellaneous little fixes for the windows build of webkit-gtk
        https://bugs.webkit.org/show_bug.cgi?id=35640

        * webkit/webkitdownload.cpp: Windows headers define ERROR
        which breaks the build. Undef ERROR if it is defined.

git-svn-id: svn://svn.chromium.org/blink/trunk@55457 bbb929c8-8fbe-4397-9dbb-9b2b20218538