third_party/WebKit/WebKit/gtk/webkit/webkitdownload.cpp
@@ -38,6 +38,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <glib/gstdio.h>
 
+#ifdef ERROR
+#undef ERROR
+#endif
+
 using namespace WebKit;
 using namespace WebCore;
 
